import { ClientOptions, Transport } from "@nestjs/microservices";
import { ConfigService } from "@nestjs/config";

const configService: ConfigService = new ConfigService();

export const grpcClientOptions: ClientOptions = {
  transport: Transport.GRPC,
  options: {
    package: [
      "user",
      "areatriggercreateproperty",
      "areatriggercreatepropertiesorbit",
      "areatriggercreatepropertiespolygonvertex",
      "areatriggercreatepropertiessplinepoint",
      "areatriggerinvolvedrelation",
      "areatriggerscript",
      "areatriggertavern",
      "areatriggerteleport",
      "areatriggertemplate",
      "areatriggertemplateaction",
      "pointsofinterestlocale",
      "pointsofinterest",
      "poolmembers",
      "pooltemplate",
      "questpoi",
      "questrewardchoiceitems",
      "prospectingloottemplate",
      "questpoolmembers",
      "questdetails",
      "questtemplate",
      "questtemplateaddon",
      "questmailsender",
      "questrequestitems",
      "questgreetinglocale",
      "questpoipoints",
      "questrewarddisplayspell",
      "questtemplatelocale",
      "questcompletionlogconditional",
      "questpooltemplate",
      "questdescriptionconditional",
      "questrequestitemsconditional",
      "questvisualeffect",
      "questgreeting",
      "questofferrewardconditional",
      "questobjectiveslocale",
      "questobjectives",
      "questofferreward",
      "questofferrewardlocale",
      "questobjectivescompletioneffect",
      "questrequestitemslocale",
      "scenariopoipoints",
      "scenariopoi",
      "scenarios",
      "scenetemplate",
      "scriptsplinechainwaypoints",
      "scriptsplinechainmeta"
    ],
    protoPath: [
      "src/user/user.proto",
      "src/areatriggercreateproperty/areatriggercreateproperty.proto",
      "src/areatriggercreatepropertiesorbit/areatriggercreatepropertiesorbit.proto",
      "src/areatriggercreatepropertiespolygonvertex/areatriggercreatepropertiespolygonvertex.proto",
      "src/areatriggercreatepropertiessplinepoint/areatriggercreatepropertiessplinepoint.proto",
      "src/areatriggerinvolvedrelation/areatriggerinvolvedrelation.proto",
      "src/areatriggerscript/areatriggerscript.proto",
      "src/areatriggertavern/areatriggertavern.proto",
      "src/areatriggerteleport/areatriggerteleport.proto",
      "src/areatriggertemplate/areatriggertemplate.proto",
      "src/areatriggertemplateaction/areatriggertemplateaction.proto",
      "src/pointsofinterestlocale/pointsofinterestlocale.proto",
      "src/pointsofinterest/pointsofinterest.proto",
      "src/poolmembers/poolmembers.proto",
      "src/pooltemplate/pooltemplate.proto",
      "src/questpoi/questpoi.proto",
      "src/questrewardchoiceitems/questrewardchoiceitems.proto",
      "src/prospectingloottemplate/prospectingloottemplate.proto",
      "src/questpoolmembers/questpoolmembers.proto",
      "src/questdetails/questdetails.proto",
      "src/questtemplate/questtemplate.proto",
      "src/questtemplateaddon/questtemplateaddon.proto",
      "src/questmailsender/questmailsender.proto",
      "src/questrequestitems/questrequestitems.proto",
      "src/questgreetinglocale/questgreetinglocale.proto",
      "src/questpoipoints/questpoipoints.proto",
      "src/questrewarddisplayspell/questrewarddisplayspell.proto",
      "src/questtemplatelocale/questtemplatelocale.proto",
      "src/questcompletionlogconditional/questcompletionlogconditional.proto",
      "src/questpooltemplate/questpooltemplate.proto",
      "src/questdescriptionconditional/questdescriptionconditional.proto",
      "src/questrequestitemsconditional/questrequestitemsconditional.proto",
      "src/questvisualeffect/questvisualeffect.proto",
      "src/questgreeting/questgreeting.proto",
      "src/questofferrewardconditional/questofferrewardconditional.proto",
      "src/questobjectiveslocale/questobjectiveslocale.proto",
      "src/questobjectives/questobjectives.proto",
      "src/questofferreward/questofferreward.proto",
      "src/questofferrewardlocale/questofferrewardlocale.proto",
      "src/questobjectivescompletioneffect/questobjectivescompletioneffect.proto",
      "src/questrequestitemslocale/questrequestitemslocale.proto",
      "src/scenariopoipoints/scenariopoipoints.proto",
      "src/scenariopoi/scenariopoi.proto",
      "src/scenarios/scenarios.proto",
      "src/scenetemplate/scenetemplate.proto",
      "src/scriptsplinechainwaypoints/scriptsplinechainwaypoints.proto",
      "src/scriptsplinechainmeta/scriptsplinechainmeta.proto"
    ],
    url: configService.get<string>("GRPC_CLIENT_URL_PATH"),
  },
};
